add cost statistics for Servers
